# 5600-VM

./: CMakeLists.txt  MMU.cpp  MMU.h  README.md  TLB.cpp  TLB.h  main.cpp
Policy/: CLOCK.cpp  CLOCK.h  FIFO.cpp  FIFO.h  LRU.cpp  LRU.h  Policy.cpp  Policy.h  RAND.cpp  RAND.h
res/: MLworkload.txt  TLB  outputAAAGame-WL.txt  outputMicroservice-WL.txt  ploter.py  workload.txt
